fifth commit - dropdown fix attempt on mobiles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3006,7 +3006,7 @@ input, select, textarea {
 		flex-wrap: wrap;
 		margin: 0 0 2em 0;
 	}
-		.features p{
+		.dropdown-text{
 			max-height: 0;
 			overflow-y: hidden;
 			transition: 0.5s ease;
